# PAOO

Tema1/src/: CMakeLists.txt  main.cxx
Tema1/src/student/: CMakeLists.txt  student.cxx  student.h
Tema2/src/: CMakeLists.txt  main.cxx
Tema2/src/circle/: CMakeLists.txt  circle.cxx  circle.h
Tema2/src/poligon/: CMakeLists.txt  poligon.cxx  poligon.h
Tema2/src/shape/: CMakeLists.txt  shape.h
Tema2/src/triangle/: CMakeLists.txt  triangle.cxx  triangle.h
Tema3/src/: CMakeLists.txt  main.cxx
Tema3/src/dataMemory/: CMakeLists.txt  dataMemory.cxx  dataMemory.h
Tema3/src/memory/: CMakeLists.txt  memory.cxx  memory.h
src/: CMakeLists.txt  tutorial.cxx
src/MathFunctions/: CMakeLists.txt  mysqrt.cxx
